// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table vis toExpressionAst function should match snapshot based on params & dimensions 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "aggs": Array [],
        "index": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "id": Array [
                    "123",
                  ],
                },
                "function": "indexPatternLoad",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "metricsAtAllLevels": Array [
          false,
        ],
        "partialRows": Array [
          true,
        ],
      },
      "function": "esaggs",
      "type": "function",
    },
    Object {
      "arguments": Object {
        "buckets": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    0,
                  ],
                  "format": Array [
                    "date",
                  ],
                  "formatParams": Array [
                    "{\\"pattern\\":\\"YYYY-MM-DD HH:mm\\"}",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "metrics": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    1,
                  ],
                  "format": Array [
                    "number",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "perPage": Array [
          20,
        ],
        "percentageCol": Array [
          "Count",
        ],
        "showMetricsAtAllLevels": Array [
          true,
        ],
        "showPartialRows": Array [
          true,
        ],
        "showToolbar": Array [
          false,
        ],
        "showTotal": Array [
          true,
        ],
        "totalFunc": Array [
          "sum",
        ],
      },
      "function": "kibana_table",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;

exports[`table vis toExpressionAst function should match snapshot without params 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "aggs": Array [],
        "index": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "id": Array [
                    "123",
                  ],
                },
                "function": "indexPatternLoad",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "metricsAtAllLevels": Array [
          false,
        ],
      },
      "function": "esaggs",
      "type": "function",
    },
    Object {
      "arguments": Object {
        "buckets": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    0,
                  ],
                  "format": Array [
                    "date",
                  ],
                  "formatParams": Array [
                    "{\\"pattern\\":\\"YYYY-MM-DD HH:mm\\"}",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "metrics": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    1,
                  ],
                  "format": Array [
                    "number",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "showLabel": Array [
          false,
        ],
      },
      "function": "kibana_table",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;
